--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ember-cli": "2.8.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.6",
+    "ember-cli-cors": "0.0.2",
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-gtm": "^0.1.1",
     "ember-cli-htmlbars": "^1.0.3",
@@ -54,6 +55,7 @@
     "ember-paper": "1.0.0-alpha.14",
     "ember-scroll-to": "0.5.4",
     "eventick": "^1.1.3",
-    "node-eventick": "0.0.3"
+    "node-eventick": "0.0.3",
+    "vindi-js": "^1.0.2"
   }
 }
