--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,12 +9,12 @@ cache:
   - node_modules/
 
 before_script:
-  - npm config set spin false
-  - npm install -g bower
-  - npm install -g ember-cli
-  - npm install -g phantomjs-prebuilt
-  - npm install
-  - bower install --allow-root
+  # - npm config set spin false
+  # - npm install -g bower
+  # - npm install -g ember-cli
+  # - npm install -g phantomjs-prebuilt
+  # - npm install
+  # - bower install --allow-root
 
 production:
   type: deploy
@@ -38,6 +38,7 @@ staging:
 dev:
   type: deploy
   script:
+  - ls -la
   - sh ./build-app-.sh
   - sh ./deploy-app.sh
   - git push -f https://thiagobernardes:waldemir@gitlab.com:LAB262/55lab-webinstitutional-deploy.git HEAD:dev
