--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ production:
 staging:
   type: deploy
   script:
-  - sh ./build-app-.sh
+  - sh ./build-app.sh
   - sh ./deploy-app.sh
   - git push -f https://thiagobernardes:waldemir@gitlab.com:LAB262/55lab-webinstitutional-deploy.git HEAD:test
 
@@ -38,8 +38,7 @@ staging:
 dev:
   type: deploy
   script:
-  - ls -la
-  - sh ./build-app-.sh
+  - sh ./build-app.sh
   - sh ./deploy-app.sh
   - git push -f https://thiagobernardes:waldemir@gitlab.com:LAB262/55lab-webinstitutional-deploy.git HEAD:dev
 
