--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,12 +9,12 @@ cache:
   - node_modules/
 
 before_script:
-  # - npm config set spin false
-  # - npm install -g bower
-  # - npm install -g ember-cli
-  # - npm install -g phantomjs-prebuilt
-  # - npm install
-  # - bower install --allow-root
+  - npm config set spin false
+  - npm install -g bower
+  - npm install -g ember-cli
+  - npm install -g phantomjs-prebuilt
+  - npm install
+  - bower install --allow-root
 
 production:
   type: deploy
