--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,11 @@
 image: node:6.5.0
 cache:
   paths:
-  # - node_modules/
+  - node_modules/
 image: node:6.5.0
 cache:
   paths:
-  # - node_modules/
+  - node_modules/
 
 before_script:
   - npm config set spin false
@@ -23,7 +23,7 @@ production:
   - git push -f https://thiagobernardes:waldemir@gitlab.com/LAB262/55lab-webinstitutional-deploy.git HEAD:master
   only:
   - master
- 
+
 staging:
   type: deploy
   script:
