--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,7 @@ production:
   script:
   - sh ./build-app.sh
   - sh ./deploy-app.sh
+  - cd ./dist
   - git push -f https://thiagobernardes:waldemir@gitlab.com/LAB262/55lab-webinstitutional-deploy.git HEAD:master
   only:
   - master
@@ -29,6 +30,7 @@ staging:
   script:
   - sh ./build-app.sh
   - sh ./deploy-app.sh
+  - cd ./dist
   - git push -f https://thiagobernardes:waldemir@gitlab.com/LAB262/55lab-webinstitutional-deploy.git HEAD:test
 
   only:
@@ -39,6 +41,7 @@ dev:
   script:
   - sh ./build-app.sh
   - sh ./deploy-app.sh
+  - cd ./dist
   - git push -f https://thiagobernardes:waldemir@gitlab.com/LAB262/55lab-webinstitutional-deploy.git HEAD:dev
 
   only:
