--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,6 @@ staging:
   - sh ./deploy-app.sh
   - cd ./dist
   - git push -f https://thiagobernardes:waldemir@gitlab.com/LAB262/55lab-webinstitutional-deploy.git HEAD:test
-
   only:
   - test
 
@@ -41,8 +40,7 @@ dev:
   script:
   - sh ./build-app.sh
   - sh ./deploy-app.sh
-  ``- cd ./dist
+  - cd ./dist
   - git push -f https://thiagobernardes:waldemir@gitlab.com/LAB262/55lab-webinstitutional-deploy.git HEAD:dev
-
   only:
   - dev
