--- a/package.json
+++ b/package.json
@@ -16,34 +16,32 @@
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
-    "ember-cli": "~2.14.0",
-    "ember-cli-shims": "^1.1.0",
-    "ember-ajax": "^3.0.0",
     "broccoli-static-compiler": "^0.2.2",
+    "ember-ajax": "^3.0.0",
+    "ember-cli": "~2.14.0",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.3.0",
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-eslint": "^3.0.0",
+    "ember-cli-gtm": "^0.1.1",
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.4.3",
     "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-mask": "1.1.0",
     "ember-cli-qunit": "^4.0.0",
+    "ember-cli-sass": "^6.1.1",
+    "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "~2.14.3",
     "ember-export-application-global": "^2.0.0",
+    "ember-g-recaptcha": "^0.4.0",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.14.0",
     "ember-welcome-page": "^3.0.0",
-    "loader.js": "^4.2.3",
-
-    "ember-cli-gtm": "^0.1.1",
-    "ember-cli-mask": "1.1.0",
-     "ember-cli-sass": "^6.1.1"
-
+    "loader.js": "^4.2.3"
   },
-
   "dependencies": {
     "broccoli-static-compiler": "^0.2.2",
     "ember-browserify": "^1.1.13",
@@ -55,7 +53,6 @@
     "eventick": "^1.1.3",
     "node-eventick": "0.0.3"
   },
-
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
   },
